Fixed alignment issues with appropriate margin/ padding for input field

--- a/packages/react-searchbox/examples/demo/src/styles.css
+++ b/packages/react-searchbox/examples/demo/src/styles.css
@@ -199,3 +199,7 @@ li.page-item.active > a {
   color: white;
   border-color: #007bff;
 }
+
+.search-icon{
+  fill:red !important;
+}
